Create first page

--- a/src/scss/bootstrap.scss
+++ b/src/scss/bootstrap.scss
@@ -1,4 +1,4 @@
-// Font
+$primary: #293264;
+$secondary: #4d5b9e;
 
-// Colors
-$primary: #4d5b9e;
+@import "../node_modules/bootstrap/scss/bootstrap";
