--- a/src/scss/bootstrap.scss
+++ b/src/scss/bootstrap.scss
@@ -1,4 +1,7 @@
 $primary: #293264;
 $secondary: #4d5b9e;
 $light: #d6dbf5;
+$success: #94d7a2;
+$danger: #f8bcbc;
+
 @import "../node_modules/bootstrap/scss/bootstrap";
